2004-07-20  Andras Varga

	* neddoc.xsl: "NED file" pages in generated HTML now contain full
	NED file listing

2004-07-19  Andras Varga

	* opp_nmakemake,opp_makemake: added -x (--notstamp) option: the 
	makefile won't require a .tstamp file to be present in directories
	that appear after the -x option on the command line.

	* opp_neddoc: added support for tags @author, @date, @todo, @bug, 
	@see, @since, @warning, @version

2004-07-16  Andras Varga

	* opp_test: added preload-ned-files=*.ned to default omnetpp.ini

2004-07-12  Andras Varga

	* opp_makemake.in,opp_nmakemake: fixed bug which caused .tstamp to be
	always updated, and thus depended directories to be always re-built.

2004-07-10  Andras Varga

	* opp_test: added further checks: %contains-filt, %not-contains-filt, 
        %contains-regex-filt, %not-contains-regex-filt. These checks
        regard only the lines beginning with "::" in the output (all other
        lines will be discarded before match). This makes it easier to
        write test cases if the test code produces lots of output.

2004-06-07  ------ omnetpp-3.0a5 released ------

2004-05-15  ------ omnetpp-3.0a4 released ------

2004-05-15  Andras Varga

	* opp_neddoc.in: prefer ImageMagick's convert to Ghostscript when
	converting EPS to JPG. Many Ghostscript versions do not crop EPS files:
	they ignore the -dEPSCrop flag and the %%BoundingBox line in the EPS
	file. (One GS that I tested and works well is AFPL Ghostscript 8.11.)
	ImageMagick also uses Ghostscript to do the conversion but works
	around the problem: adds the line "120 45 translate" to the front of 
	the EPS file (where the numbers	are -1 times the top-left corner of 
	the %%BoundingBox) before invoking GS, then after GS it crops the
	resulting raster image to the correct size.

2004-04-14  Andras Varga

	* neddoc.xsl: fixed bug which caused some inheritance arrows to be 
	drawn in wrong direction

2004-03-22  ------ omnetpp-3.0a3 released ------

2004-03-05  Andras Varga
