@@ -28,6 +28,9 @@
 <!-- to enable generating diagrams via .dot files, set this to 'yes' -->
 <xsl:param name="have-dot" select="'yes'"/>
 
+<!-- to enable including the source code of components, set this to 'yes' -->
+<xsl:param name="include-source-code" select="'yes'"/>
+
 <!-- XML tag file generated by Doxygen; if empty, links to Doxygen stuff will be left out -->
 <xsl:param name="doxytagfile" select="''"/>
 
@@ -465,7 +468,9 @@
          </xsl:if>
          <xsl:call-template name="print-channel-used-in"/>
          <xsl:call-template name="print-attrs"/>
-         <xsl:call-template name="print-source"/>
+         <xsl:if test="$include-source-code='yes'">
+            <xsl:call-template name="print-source"/>
+         </xsl:if>
       </xsl:with-param>
    </xsl:call-template>
 </xsl:template>
@@ -486,7 +491,9 @@
          <xsl:call-template name="print-module-used-in"/>
          <xsl:call-template name="print-params"/>
          <xsl:call-template name="print-gates"/>
-         <xsl:call-template name="print-source"/>
+         <xsl:if test="$include-source-code='yes'">
+            <xsl:call-template name="print-source"/>
+         </xsl:if>
       </xsl:with-param>
    </xsl:call-template>
 </xsl:template>
@@ -509,7 +516,9 @@
          <xsl:if test="$document-unassigned-params='yes'">
             <xsl:call-template name="print-unset-submodparams"/>
          </xsl:if>
-         <xsl:call-template name="print-source"/>
+         <xsl:if test="$include-source-code='yes'">
+            <xsl:call-template name="print-source"/>
+         </xsl:if>
       </xsl:with-param>
    </xsl:call-template>
 </xsl:template>
@@ -527,7 +536,9 @@
             <xsl:call-template name="print-module-usage-diagram"/>
          </xsl:if>
          <xsl:call-template name="print-substparams"/>
-         <xsl:call-template name="print-source"/>
+         <xsl:if test="$include-source-code='yes'">
+            <xsl:call-template name="print-source"/>
+         </xsl:if>
       </xsl:with-param>
    </xsl:call-template>
 </xsl:template>
@@ -549,7 +560,9 @@
          <xsl:call-template name="print-subclasses"/>
          <xsl:call-template name="print-properties"/>
          <xsl:call-template name="print-fields"/>
-         <xsl:call-template name="print-source"/>
+         <xsl:if test="$include-source-code='yes'">
+            <xsl:call-template name="print-source"/>
+         </xsl:if>
       </xsl:with-param>
    </xsl:call-template>
 </xsl:template>
@@ -571,7 +584,9 @@
          <xsl:call-template name="print-subclasses"/>
          <xsl:call-template name="print-properties"/>
          <xsl:call-template name="print-fields"/>
-         <xsl:call-template name="print-source"/>
+         <xsl:if test="$include-source-code='yes'">
+            <xsl:call-template name="print-source"/>
+         </xsl:if>
       </xsl:with-param>
    </xsl:call-template>
 </xsl:template>
@@ -593,7 +608,9 @@
          <xsl:call-template name="print-subclasses"/>
          <xsl:call-template name="print-properties"/>
          <xsl:call-template name="print-fields"/>
-         <xsl:call-template name="print-source"/>
+         <xsl:if test="$include-source-code='yes'">
+            <xsl:call-template name="print-source"/>
+         </xsl:if>
       </xsl:with-param>
    </xsl:call-template>
 </xsl:template>
@@ -611,7 +628,9 @@
          <xsl:call-template name="print-extends"/>
          <xsl:call-template name="print-properties"/>
          <xsl:call-template name="print-enumfields"/>
-         <xsl:call-template name="print-source"/>
+         <xsl:if test="$include-source-code='yes'">
+            <xsl:call-template name="print-source"/>
+         </xsl:if>
       </xsl:with-param>
    </xsl:call-template>
 </xsl:template>
